Fix horizontal scroll bar on Home Component

--- a/src/assets/stylesheet/Home.module.css
+++ b/src/assets/stylesheet/Home.module.css
@@ -14,8 +14,8 @@
   display: block;
   position: absolute;
   opacity: 0.5;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   background-image: url("../images/chart.png");
   background-position: 80% 100%;
   background-size: contain;
